--- a/ms-formation.properties
+++ b/ms-formation.properties
@@ -12,5 +12,5 @@ logging.level.com.example.msformation.proxies.PtoxyScolarite=DEBUG
 feign.client.config.default.logger-level=FULL
 
 
-mes-config.email=a.guenanou@esi-sba.dz
+mes-config.email=a.guenanou7@esi-sba.dz
 mes-config.compte=46895731642548
